@@ -1,3 +1,6 @@
+* Added automatic scale_factor/add_offset/missing_value/_FillValue conversion
+  for HDF5 (similar to what was already done for netcdf and HDF4).
+
 * Improved reading performance of GRIB messages that use 'simple packing'.
 
 2.18.1 2017-03-23
